feat: add experiance section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="nav__item"><a class="nav__link" href="#about">About</a></li>
                 <li class="nav__item"><a class="nav__link" href="#skills">Skills</a></li>
                 <li class="nav__item"><a class="nav__link" href="#code">Code</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Projects</a></li>
+                <li class="nav__item"><a class="nav__link" href="#experience">Experience</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Education</a></li>
                 <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
             </ul>
@@ -132,6 +132,25 @@
    </pre>
   </div>
  </section>
+  <!-- Projects -->
+  <section class="experience" id="experience">
+    <h3 class="section-title"> </h2>
+    <div class="experience__container bd-grid">
+    <div class="experience__data">
+        <div class="project__name"> 
+        <h4>Portfolio website</h4> 
+        <p>        It is a personal website designed in Figma,developed using Html5,Css3,and Javascript tools. Worked as a web designer and developer.</p>
+        <a href="https://github.com/guliaisaeva/MyWebsite"> Link to source code</a> </div>
+        <div class="project__name">
+        <h4>Tetris Game Project</h4><p>It is browser-based online Tetris game designed in Figma ,developed using Html5,Css3,Javascript tools.Designed and developed by me.</p><a href="https://github.com/guliaisaeva/bootcamp/tree/main/TetrisTasks">Link to source code</a></div>
+        <div class="project__name">
+        <h4>Other small projects like heart trial animation,JS quote Generator and more</h4>
+         <a href="https://github.com/guliaisaeva/MyMiniProjectsWithJS">Link to source code</a>
+        </div>
+       
+    </div>
+</div>
+</section> 
  </main>
  <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
  <script>
