feat: add main and footer

--- a/index.html
+++ b/index.html
@@ -1,102 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV|Gulia Isaeva|Front-End Web Developer</title>
-    <!-- link to style css -->
-    <link rel="stylesheet" href="style.css">
-    <!-- link to google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap" rel="stylesheet">
-    <!-- link to fontawesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV|Gulia Isaeva|Front-End Web Developer</title>
+  <!-- link to style css -->
+  <link rel="stylesheet" href="style.css">
+  <!-- link to google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap"
+    rel="stylesheet">
+  <!-- link to fontawesome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-    <!-- HEADER -->
- <header  class="header">
-
+  <!-- HEADER -->
+  <header class="header">
     <!-- navigation -->
     <nav class="nav bd-grid">
-        <div class="nav__logo"><a href="#home">Gulia</a></div>
-        <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link active" href="#home">Home</a></li>
-                <li class="nav__item"><a class="nav__link" href="#about">About</a></li>
-                <li class="nav__item"><a class="nav__link" href="#skills">Skills</a></li>
-                <li class="nav__item"><a class="nav__link" href="#code">Code</a></li>
-                <li class="nav__item"><a class="nav__link" href="#experience">Experience</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Education</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
-            </ul>
-        </div>
-            <div class="nav__toggle" id="nav-toggle">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-    </nav>    
- </header>
- <!-- MAIN -->
-<main class="main">
+      <div class="nav__logo"><a class="nav__logo-link" href="#home"><span>G</span>ulia</a></div>
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link active" href="#home">Home</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about">About</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#skills">Skills</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#code">Code</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#experience">Experience</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#education">Education</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="languages">Language</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav__toggle" id="nav-toggle">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </nav>
+  </header>
+  <!-- MAIN -->
+  <main class="main">
     <!-- HOME -->
     <section class="home bd-grid" id="home">
-            <div class="home__data">  
-                <h1 class="home__title">I am <span class="home__title-color">Gulia</span></h1>
-                <p>Junior Front-End  Web Developer</p>
-                <a href="#"class="button">Contact</a>
-            </div>
-            <div class="home__social">
-                <a class="home__social-icon" href="#"><i class="fa-brands fa-github icon"></i></a>
-                <a class="home__social-icon" href="#"><i class="fa-solid fa-envelope icon"></i></a>
-            </div>
-             <div class="home__img">
-                <img src="images/gulia.png" alt="gulia">
-             </div>
-       </div> 
+      <div class="home__content">
+        <div class="home__data">
+          <h1 class="home__title">
+            Hi! I am <span class="home__title-color">Gulia</span>
+          </h1>
+          <p>Junior Front-End Web Developer</p>
+          <a href="#" class="button">Contact</a>
+        </div>
+        <div class="home__img">
+          <img src="images/flower.gif" alt="flower">
+        </div>
+        <div class="home__social">
+          <a class="home__social-icon" href="#"><i class="fa-brands fa-github icon"></i></a>
+          <a class="home__social-icon" href="#"><i class="fa-solid fa-envelope icon"></i></a>
+        </div>
+      </div>
 
-    </section> 
+    </section>
     <!-- ABOUT -->
     <section class="about" id="about">
-    <h3 class="section-title">About</h2>
+      <h3 class="section-title">About</h3>
 
-    <div class="about__container bd-grid">
+      <div class="about__container bd-grid">
         <div class="about__img">
-            <img src="images/flower.gif" alt="flower">
+          <img src="images/gulia.png" alt="gulia">
         </div>
-        <div >
-            <h3 class="about__subtitle">I am Gulia</h3>
-            <p class="about__text">Creative detail-oriented junior Front End Web Developer. <br>
-                Skilled in designing,developing,troubleshooting responsive websites. <br>   
-                Proficient in HTML5,CSS3,JAVASCRIPT(ES6),user interface and user experience (UI/UX) and in learning process of modern libraries and frameworks.
-                Experienced with Trello,Miro,Notion.
-                Well self-organized,team player,self-motivated and passionate to learn new skills and solve problems.</p>
+        <div>
+          <h3 class="about__subtitle">I am Gulia</h3>
+          <p class="about__text">
+            Creative detail-oriented junior Front End Web Developer. <br>
+            Skilled in designing,developing,troubleshooting responsive
+            websites. <br>
+            Proficient in HTML5,CSS3,JAVASCRIPT(ES6),user interface and user
+            experience (UI/UX) and in learning process of modern libraries and
+            frameworks. Experienced with Trello,Miro,Notion. Well
+            self-organized,team player,self-motivated and passionate to learn
+            new skills and solve problems.
+          </p>
         </div>
-    </div>
+      </div>
     </section>
     <!-- SKILLS    -->
     <section class="skills" id="skills">
-        <h3 class="section-title"> Professional Skills</h2>
-        <div class="skills__container bd-grid">
+      <h3 class="section-title">Professional Skills</h3>
+      <div class="skills__container bd-grid">
         <ul class="skills__data">
-            <li class="skills__name"><i class="fa-brands icon fa-html5"></i><br><span>HTML</span> </li>
-            <li class="skills__name"><i class="fa-brands icon fa-css3-alt"></i><br><span>CSS</span></li>
-            <li class="skills__name"><i class="fa-brands icon fa-square-js"></i><br><span>JS</span></li>
-            <li class="skills__name"><i class="fa-brands icon fa-square-git"></i><br><span>GIT</span></li>
-            <li class="skills__name"><i class="fa-brands icon fa-github"></i><br><span>Github</span></li>
-            <li class="skills__name"><i class="fa-brands icon fa-figma"></i><br><span>Figma</span></li>
-            <li class="skills__name"><iconify-icon icon="file-icons:adobe-photoshop" class="icon" style="color: black;"></iconify-icon><br><span>Photoshop</span></li>
+          <li class="skills__name">
+            <i class="fa-brands icon fa-html5"></i><br><span>HTML</span>
+          </li>
+          <li class="skills__name">
+            <i class="fa-brands icon fa-css3-alt"></i><br><span>CSS</span>
+          </li>
+          <li class="skills__name">
+            <i class="fa-brands icon fa-square-js"></i><br><span>JS</span>
+          </li>
+          <li class="skills__name">
+            <i class="fa-brands icon fa-square-git"></i><br><span>GIT</span>
+          </li>
+          <li class="skills__name">
+            <i class="fa-brands icon fa-github"></i><br><span>Github</span>
+          </li>
+          <li class="skills__name">
+            <i class="fa-brands icon fa-figma"></i><br><span>Figma</span>
+          </li>
+          <li class="skills__name">
+            <iconify-icon icon="file-icons:adobe-photoshop" class="icon" style="color: black"></iconify-icon>
+            <br><span>Photoshop</span>
+          </li>
         </ul>
-    </div>
-    </section> 
+      </div>
+    </section>
 
-     <!-- Example Code -->
-     <section class="exCode" id="code">
-        <h3 class="section-title">Code Example</h2>
-        <div class="exCode__container bd-grid">  
-         <pre>
+    <!-- Example Code -->
+    <section class="exCode" id="code">
+      <h3 class="section-title">Code Example</h3>
+      <div class="exCode__container bd-grid">
+        <pre>
      <em class="exCode__subtitle">
      Task:
      Implement the function which takes an array containing the names of people that like an item.
@@ -130,53 +166,162 @@
 
     </code>
    </pre>
-  </div>
- </section>
-  <!-- Projects -->
-  <section class="experience" id="experience">
-    <h3 class="section-title"> </h2>
-    <div class="experience__container bd-grid">
-    <div class="experience__data">
-        <div class="project__name"> 
-        <h4>Portfolio website</h4> 
-        <p>        It is a personal website designed in Figma,developed using Html5,Css3,and Javascript tools. Worked as a web designer and developer.</p>
-        <a href="https://github.com/guliaisaeva/MyWebsite"> Link to source code</a> </div>
-        <div class="project__name">
-        <h4>Tetris Game Project</h4><p>It is browser-based online Tetris game designed in Figma ,developed using Html5,Css3,Javascript tools.Designed and developed by me.</p><a href="https://github.com/guliaisaeva/bootcamp/tree/main/TetrisTasks">Link to source code</a></div>
-        <div class="project__name">
-        <h4>Other small projects like heart trial animation,JS quote Generator and more</h4>
-         <a href="https://github.com/guliaisaeva/MyMiniProjectsWithJS">Link to source code</a>
+      </div>
+    </section>
+    <!-- Experience -->
+    <section class="experience" id="experience">
+      <h3 class="section-title">Experience</h3>
+      <div class="experience__container bd-grid">
+        <div class="experience__data">
+          <article class="project__name">
+            <h4>Portfolio website</h4>
+            <p>
+              It is a personal website designed in Figma,developed using
+              Html5,Css3,and Javascript tools. Worked as a web designer and
+              developer.
+            </p>
+            <a href="https://github.com/guliaisaeva/MyWebsite" target="_blank">
+              Link to source code</a>
+          </article>
+          <article class="project__name">
+            <h4>Tetris Game Project</h4>
+            <p>
+              It is browser-based online Tetris game designed in Figma,developed using Html5,Css3,Javascript
+              tools.Designed and developed by me.
+            </p>
+            <a href="https://github.com/guliaisaeva/bootcamp/tree/main/TetrisTasks" target="_blank">Link to source
+              code</a>
+          </article>
+          <article class="project__name">
+            <h4>
+              Other small projects
+            </h4>
+            <p> Projects like heart trial animation,JS quote
+              Generator and more...</p>
+            <a href="https://github.com/guliaisaeva/MyMiniProjectsWithJS" target="_blank">Link to source code</a>
+          </article>
         </div>
-       
-    </div>
-</div>
-</section> 
- </main>
- <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
- <script>
+      </div>
+    </section>
+    <!-- Education -->
+    <section class="education" id="education">
+      <h3 class="section-title">Education,Courses,Lectures</h3>
+      <div class="education__container bd-grid">
+        <ul class="education__list">
+          <li>💡<strong>2022-present</strong>
+            JavaScript/Front-end Turkey 2022
+            <a href="https://rs.school/">Rolling Scopes School</a>
+          </li>
+          <li>💡<strong>2022-present</strong>
+            Udemy,The Web Developer Bootcamp 2022 by Colt Steele
+          </li>
+          <li>💡<strong>2022</strong>
+            Udemy,JavaScript: Understanding the Weird Parts by Anthony Alicea
+          </li>
+          <li>💡<strong>2021</strong>
+            IT online Bootcamp ,Web Development(Html,Css,Javascript)
+          </li>
+          <li>💡<strong>2021</strong>
+            FreeCodeCamp,_Responsive Web Design
+          </li>
+          <li>💡<strong>2021</strong>
+            W3school, _Html/Css/Js courses
+          </li>
+          <li>💡<strong>2020-2021</strong>
+            IT school “Jyldyz Academy”,Web Development(Html,Css,Javascript)
+          </li>
+          <li>💡<strong>Codecademy,Virtual event:</strong>
+            <em>Junior Developer Interview Prep w/ Devops Consultant Mariana Bocoi Part 1: Soft Skills! How did it
+              go?</em>
+          </li>
+          <li>💡<strong>BORDERLESS JS CONFERENCE 2022,Virtual event:</strong>
+            Tech talks and discuss the latest news from the world of fullstack JS development
+          </li>
 
+        </ul>
+        <hr>
+        <ul>
+          <li>📕<strong>2013-2015</strong>
+            Hamburg University(Master Degree of Art) in Performance Studies /Germany
+          </li>
+          <li>📕<strong>2012-2013</strong>
+            Studienkolleg Hamburg Propädeutikum /Germany
+          </li>
+          <li>📕<strong>2005-2010</strong>
+            Kyrgyz-Turkish University “Manas”(Bachelor),Radyo,TV and Cinema/Bishkek-Kyrgystan
+          </li>
+        </ul>
+
+      </div>
+
+    </section>
+    <section class="languages" id="languages">
+      <h3 class="section-title">Language Skills</h3>
+      <div class="language__container bd-grid">
+        <table>
+          <tr>
+            <th>LANGUAGE</th>
+            <th>LEVEL</th>
+          </tr>
+
+          <tr>
+            <td>Kyrgyz</td>
+            <td>Native / C2</td>
+          </tr>
+          <tr>
+            <td>Turkish</td>
+            <td>Advanced / C2</td>
+          </tr>
+          <tr>
+            <td>Russian</td>
+            <td>Advanced / C2</td>
+          </tr>
+          <tr>
+            <td>German</td>
+            <td>Upper-intermediate / B2-C1</td>
+          </tr>
+          <tr>
+            <td>English</td>
+            <td>Upper-intermediate / B2</td>
+          </tr>
+        </table>
+      </div>
+    </section>
+  </main>
+  <!-- FOOTER -->
+  <footer class="footer bd-grid">
+
+    <div class="footer__social">
+      <a href="https://github.com/guliaisaeva" class="footer_icon"> <i class="fa-brands icon fa-github"></i></a>
+      <a href="https://rs.school/" class="footer_icon"><img src="images/rs_school.svg" alt="rs_school logo"
+          width="36"></a>
+    </div>
+    <p>&#169; <span>10/2022 </span> copyright all right reserved</p>
+
+  </footer>
+  <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
+  <script>
     // JS Show Menu
-   
-    const toggleEl=document.getElementById("nav-toggle")
- 
-    const navEl=document.getElementById("nav-menu");
- 
-    toggleEl.addEventListener("click",()=>{
-        toggleEl.classList.toggle("show");
-        navEl.classList.toggle("show");
-    })
+
+    const toggleEl = document.getElementById('nav-toggle');
+
+    const navEl = document.getElementById('nav-menu');
+
+    toggleEl.addEventListener('click', () => {
+      toggleEl.classList.toggle('show');
+      navEl.classList.toggle('show');
+    });
 
     // active and show menu
-    const navLink=document.querySelectorAll(".nav__link");
-    function linkAction(){
-        navLink.forEach(link=>link.classList.remove("active"))
-        this.classList.add('active');
-    //     // remove menu
-        const navMenu=document.getElementById("nav-menu")
-        navMenu.classList.remove("show")
+    const navLink = document.querySelectorAll('.nav__link');
+    function linkAction() {
+      navLink.forEach((link) => link.classList.remove('active'));
+      this.classList.add('active');
+      //     // remove menu
+      const navMenu = document.getElementById('nav-menu');
+      navMenu.classList.remove('show');
     }
-    navLink.forEach(link=>link.addEventListener("click",linkAction))
- </script>
- 
- </body>
-</html> 
+    navLink.forEach((link) => link.addEventListener('click', linkAction));
+  </script>
+</body>
+</html>
