feat: add js file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav__link" href="#education">Education</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="languages">Language</a>
+            <a class="nav__link" href="#languages">Language</a>
           </li>
         </ul>
       </div>
@@ -300,28 +300,7 @@
 
   </footer>
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
-  <script>
-    // JS Show Menu
-
-    const toggleEl = document.getElementById('nav-toggle');
-
-    const navEl = document.getElementById('nav-menu');
-
-    toggleEl.addEventListener('click', () => {
-      toggleEl.classList.toggle('show');
-      navEl.classList.toggle('show');
-    });
-
-    // active and show menu
-    const navLink = document.querySelectorAll('.nav__link');
-    function linkAction() {
-      navLink.forEach((link) => link.classList.remove('active'));
-      this.classList.add('active');
-      //     // remove menu
-      const navMenu = document.getElementById('nav-menu');
-      navMenu.classList.remove('show');
-    }
-    navLink.forEach((link) => link.addEventListener('click', linkAction));
+  <script src="main.js">
   </script>
 </body>
 </html>
