--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <li class="nav__item">
             <a class="nav__link" href="#languages">Language</a>
           </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#contacts">Contacts</a>
+          </li>
         </ul>
       </div>
       <div class="nav__toggle" id="nav-toggle">
@@ -68,8 +71,10 @@
           <img src="images/flower.gif" alt="flower">
         </div>
         <div class="home__social">
-          <a class="home__social-icon" href="#"><i class="fa-brands fa-github icon"></i></a>
-          <a class="home__social-icon" href="#"><i class="fa-solid fa-envelope icon"></i></a>
+          <a class="home__social-icon" href="https://github.com/guliaisaeva"><i
+              class="fa-brands fa-github icon"></i></a>
+          <a class="home__social-icon" href="mailto:gulya.isaeva.pls@gmail.com"><i
+              class="fa-solid fa-envelope icon"></i></a>
         </div>
       </div>
 
@@ -253,8 +258,9 @@
         </ul>
 
       </div>
-
     </section>
+
+    <!-- languages -->
     <section class="languages" id="languages">
       <h3 class="section-title">Language Skills</h3>
       <div class="language__container bd-grid">
@@ -287,6 +293,17 @@
         </table>
       </div>
     </section>
+    <!-- contacts -->
+    <section class="contacts bd-grid" id="contacts">
+      <h3 class="section-title">Contacts</h3>
+      <ul class="contacts__list">
+        <li><a class="contact__social-icon" href="https://github.com/guliaisaeva"><i
+              class="fa-brands fa-github icon"></i></a>
+        </li>
+        <li><a class="contact__social-icon" href="mailto:gulya.isaeva.pls@gmail.com"><i
+              class="fa-solid fa-envelope icon"></i></a></li>
+      </ul>
+    </section>
   </main>
   <!-- FOOTER -->
   <footer class="footer bd-grid">
@@ -294,7 +311,7 @@
     <div class="footer__social">
       <a href="https://github.com/guliaisaeva" class="footer_icon"> <i class="fa-brands icon fa-github"></i></a>
       <a href="https://rs.school/" class="footer_icon"><img src="images/rs_school.svg" alt="rs_school logo"
-          width="40"></a>
+          width="64"></a>
     </div>
     <p>&#169; <span>10/2022 </span> copyright all right reserved</p>
 
