feat: add text to language section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav__link" href="#code">Code</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#experience">Experience</a>
+            <a class="nav__link" href="#experience">Projects</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#education">Education</a>
@@ -173,9 +173,9 @@
    </pre>
       </div>
     </section>
-    <!-- Experience -->
-    <section class="experience" id="experience">
-      <h3 class="section-title">Experience</h3>
+    <!-- Experience /Projects -->
+    <section class="experience projects" id="experience">
+      <h3 class="section-title">Experience and Projects</h3>
       <div class="experience__container bd-grid">
         <div class="experience__data">
           <article class="project__name">
@@ -291,7 +291,14 @@
             <td>Upper-intermediate / B2</td>
           </tr>
         </table>
+        <br>
+        <p><em>I learned the basics of English at school and English courses.
+            After I improved my English language skills
+            with pre-sessional English programm at the University and during internships,student exchange programs
+            abroad.
+            I follow all courses related to programming and computer science in English.</em></p>
       </div>
+
     </section>
     <!-- contacts -->
     <section class="contacts bd-grid" id="contacts">
@@ -307,13 +314,12 @@
   </main>
   <!-- FOOTER -->
   <footer class="footer bd-grid">
-
     <div class="footer__social">
       <a href="https://github.com/guliaisaeva" class="footer_icon"> <i class="fa-brands icon fa-github"></i></a>
       <a href="https://rs.school/" class="footer_icon"><img src="images/rs_school.svg" alt="rs_school logo"
           width="64"></a>
     </div>
-    <p>&#169; <span>10/2022 </span> copyright all right reserved</p>
+    <p>&#169;<span>10/2022 </span> copyright all right reserved</p>
 
   </footer>
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
