feat: add contact link to button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             Hi! I am <span class="home__title-color">Gulia</span>
           </h1>
           <p>Junior Front-End Web Developer</p>
-          <a href="#" class="button">Contact</a>
+          <a href="#contacts" class="button">Contact</a>
         </div>
         <div class="home__img">
           <img src="images/flower.gif" alt="flower">
