fix : add corrections

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
      It must return the display text as shown in the examples:
      </em> 
 
-      []                                -->  "no one likes this"  
-      ["Gulia"]                         -->  "Gulia likes this"   
-      ["Jacob", "Alex"]                 -->  "Jacob and Alex like this"   
-      ["Max", "John", "Mark"]           -->  "Max, John and Mark like this"   
-      ["Alex", "Jacob", "Mark", "Max"]  -->  "Alex, Jacob and 2 others like this" 
+      []                                --&gt;  "no one likes this"  
+      ["Gulia"]                         --&gt;  "Gulia likes this"   
+      ["Jacob", "Alex"]                 --&gt;  "Jacob and Alex like this"   
+      ["Max", "John", "Mark"]           --&gt;  "Max, John and Mark like this"   
+      ["Alex", "Jacob", "Mark", "Max"]  --&gt;  "Alex, Jacob and 2 others like this" 
 
     <code class="jsCode">
         function likes(arr){
@@ -265,31 +265,35 @@
       <h3 class="section-title">Language Skills</h3>
       <div class="language__container bd-grid">
         <table>
-          <tr>
-            <th>LANGUAGE</th>
-            <th>LEVEL</th>
-          </tr>
+          <thead>
+            <tr>
+              <th scope="col">LANGUAGE</th>
+              <th scope="col">LEVEL</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Kyrgyz</td>
+              <td>Native / C2</td>
+            </tr>
+            <tr>
+              <td>Turkish</td>
+              <td>Advanced / C2</td>
+            </tr>
+            <tr>
+              <td>Russian</td>
+              <td>Advanced / C2</td>
+            </tr>
+            <tr>
+              <td>German</td>
+              <td>Upper-intermediate / B2-C1</td>
+            </tr>
+            <tr>
+              <td>English</td>
+              <td>Upper-intermediate / B2</td>
+            </tr>
+          </tbody>
 
-          <tr>
-            <td>Kyrgyz</td>
-            <td>Native / C2</td>
-          </tr>
-          <tr>
-            <td>Turkish</td>
-            <td>Advanced / C2</td>
-          </tr>
-          <tr>
-            <td>Russian</td>
-            <td>Advanced / C2</td>
-          </tr>
-          <tr>
-            <td>German</td>
-            <td>Upper-intermediate / B2-C1</td>
-          </tr>
-          <tr>
-            <td>English</td>
-            <td>Upper-intermediate / B2</td>
-          </tr>
         </table>
         <br>
         <p><em>I learned the basics of English at school and English courses.
@@ -315,8 +319,8 @@
   <!-- FOOTER -->
   <footer class="footer bd-grid">
     <div class="footer__social">
-      <a href="https://github.com/guliaisaeva" class="footer_icon"> <i class="fa-brands icon fa-github"></i></a>
-      <a href="https://rs.school/" class="footer_icon"><img src="images/rs_school.svg" alt="rs_school logo"
+      <a href="https://github.com/guliaisaeva" class="footer_icon">Github<i class="fa-brands icon fa-github"></i></a>
+      <a href="https://rs.school/" class="footer_icon">Email<img src="images/rs_school.svg" alt="rs_school logo"
           width="64"></a>
     </div>
     <p>&#169;<span>10/2022 </span> copyright all right reserved</p>
